--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,17 @@ padding-bottom: 500px;
 h1 {
   color: blue;
 }
+ red-title {
+  background-color: black;
+  color: red;
+  padding: 15px;
+  border: 5px solid red;
+
+ }
+title {
+  background-color: black;
+  color: white;
+  padding: 15px;
+  border: 5px solid white;
+
+ }
